Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.2(EOL)
-
None
Description
Using aggregated functions/window functions in anchor part (not in a recursive part)-is allowed in Mysql, Mariadb returns error 4008: Restrictions imposed on recursive definitions are violated for table
create table t1(b int); |
insert into t1 values(10),(20),(10); |
|
with recursive qn as |
(select max(b) as a from t1 union |
select a from qn) |
select * from qn; |
|
with recursive qn as |
(select rank() over (order by b) as a from t1 union |
select a from qn) |
select * from qn; |
Attachments
Issue Links
- relates to
-
MDEV-15447 Import CTE tests from MySQL 8
-
- Closed
-