MDEV-15894 Error, while using aggregated functions/window functions in anchor part

Usage of aggregate/window functions in non-recursive parts of recursive CTEs
is allowed. Error messages complaining about this were reported by mistake.